--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,11 @@
     <string name="loading">加载中…</string>
     <string name="loading_no_more">已加载全部</string>
 
+    <string name="add_favorite_success">收藏成功</string>
+    <string name="add_favorite_faile">收藏失败</string>
+    <string name="del_favorite_success">已取消收藏</string>
+    <string name="del_favorite_faile">取消收藏失败</string>
+
     <string name="copy">复制</string>
     <string name="delete">删除</string>
     <string name="copy_success">复制成功</string>
@@ -71,5 +76,53 @@
     <string name="share_title_post">开源中国帖子分享</string>
     <string name="tip_start_share">开始分享…</string>
     <string name="tip_share_done">分享完成</string>
+
+
+    <string name="report">举报</string>
+    <string name="report_link">链接地址</string>
+    <string name="report_reson">举报原因</string>
+    <string name="hint_report_desc">其他原因</string>
+    <string name="tip_report_success">举报成功</string>
+    <string name="tip_report_faile">举报失败</string>
+
+    <string name="ok">确定</string>
+    <string name="cancle">取消</string>
+    <string name="clean_cache_mes">是否清空缓存?</string>
+    <string name="draft_tweet_message">是否保存为草稿?</string>
+    <string name="clearwords">是否清空内容?</string>
+    <string name="choose_picture">选择图片</string>
+    <string name="tip_content_empty">内容不能为空</string>
+    <string name="tip_content_too_long">内容太长</string>
+
+    <string name="progress_submit">正在提交…</string>
+
+    <!-- notification messages -->
+    <string name="comment_blog">发布评论</string>
+    <string name="comment_publishing">正在发布你的评论…</string>
+    <string name="comment_publish_success">评论成功</string>
+    <string name="comment_publish_faile">评论失败</string>
+
+    <string name="send_message_to">发送私信给:</string>
+    <string name="hint_user_name">对方昵称</string>
+    <string name="hint_message">私信内容</string>
+    <string name="tip_message_public_success">发送成功</string>
+    <string name="tip_message_public_faile">发送失败</string>
+    <string name="send_to">发给</string>
+    <string name="message_count">%s条私信</string>
+
+    <string name="confirm_delete_message">确定要删除和\"%s\"的所有私信吗?</string>
+    <string name="confirm_delete_one_message">确定要删除这条私信吗?</string>
+    <string name="tip_delete_success">删除成功</string>
+    <string name="tip_delete_faile">无法删除</string>
+
+    <string name="actionbar_title_question_tag">%s相关</string>
+    <string name="comment_count">评论(%s)</string>
+    <string name="comment_empty">暂无评论</string>
+    <string name="answer_count">回复(%s)</string>
+    <string name="post_answer">回复</string>
+    <string name="comment_reply_count">---共有%s条回复---</string>
+    <string name="comment_refer_author">引用来自%s的评论</string>
+    <string name="tip_comment_content_empty">评论内容不能为空</string>
+
 
 </resources>
